--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -26,19 +26,13 @@
           <span class="icon-bar"></span>
         </button>
       </div>
-      <!-- <div class="logo">
+      <div class="logo">
         <a href="/"><img src="/images/logo.png" alt=""></a>
-      </div> -->
+      </div>
       <div class="collapse navbar-collapse" id="home-nav">
         <ul class="nav navbar-nav">
           <li>
             <a href="/new">Post a game</a>
-          </li>
-          <li class="nav-logo">
-            <a href="/" class="navbar-brand">
-              <!-- <img class="nav-logo-image" src="images/logo.png" alt="Game On Logo"> -->
-              <img class="logo" src="/images/logo.png" alt="">
-            </a>
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
