--- a/views/games/new.ejs
+++ b/views/games/new.ejs
@@ -4,7 +4,7 @@
       <form action="/new" method="post">
         <div class="form-group">
           <label for="title">Title</label>
-          <input required="true" type="text" name="title" class="form-control">
+          <input required="true" type="text" name="title" class="form-control" placeholder="Make title great again">
         </div>
         <div class="form-group">
           <label for="bg">Board Game</label>
@@ -69,7 +69,7 @@
         <br>
         <div class="form-group">
           <label for="description">Description</label>
-          <textarea required="true" type="password" name="description" class="form-control" rows="5"></textarea>
+          <textarea required="true" type="password" name="description" class="form-control" rows="5" placeholder="Avoid using yolo, kikou, lol..."></textarea>
         </div>
         <div class="form-group">
           <label for="adress">Adress</label>
@@ -83,18 +83,23 @@
         <div class="form-group">
           <label for="example-datetime-local-input" class="col-2 col-form-label">Date and time</label>
           <div class="col-12">
-            <input required="true" class="form-control" type="datetime-local" name="time" value="2011-08-19T13:45:00" id="example-datetime-local-input">
+            <input required="true" class="form-control" type="datetime-local" name="time" value="2018-02-11T19:45:00" id="example-datetime-local-input">
           </div>
         </div>
         <div class="form-group">
-          <label for="players">Players Minimum</label>
-          <input required="true" type="number" value="1" name="playersmin" class="form-control">
+          <div class="col-lg-6">
+            <label for="players">Players Minimum</label>
+            <input required="true" type="number" value="1" name="playersmin" class="form-control">
+          </div>
+          <div class="col-lg-6">
+            <label for="players">Players Maximum</label>
+            <input required="true" type="number" value="4" name="playersmax" class="form-control">
+          </div>
         </div>
-        <div class="form-group">
-          <label for="players">Players Maximum</label>
-          <input required="true" type="number" value="4" name="playersmax" class="form-control">
+        <div class="row"></div>
+        <div class="row text-center">
+          <button type="submit" class="btn btn-primary" style="margin: 0auto">Create a game</button>
         </div>
-        <button type="submit" class="btn btn-primary">Create a game</button>
       </form>
     </div>
 
