--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-6 centered-form">
-      <form action="/profile" method="post" enctype="multipart/form-data">
+      <h3 class="modify-information">Modify my profile Information</h3>
+      <form class="form-size" action="/profile" method="post" enctype="multipart/form-data">
         <div class="form-group">
           <label for="username">Username</label>
           <input type="text" name="username" class="form-control" value="">
