--- a/views/games/new.ejs
+++ b/views/games/new.ejs
@@ -38,9 +38,9 @@
                   '<img class="card-img-top img-responsive" style="height:100px; margin:0 auto" src="' + filteredBg[i]
                   .img +
                   '">' +
-                  '<h3 class="card-title">' +
+                  '<p class="card-title">' +
                   filteredBg[i].title +
-                  '</h3><br>' +
+                  '</p><br>' +
                   '<p class="card-text"><i class="fa fa-child"></i> ' +
                   filteredBg[i].age +
                   '</p>' +
@@ -67,6 +67,7 @@
           </script>
         </div>
         <br>
+        <div class="row"></div>
         <div class="form-group">
           <label for="description">Description</label>
           <textarea required="true" type="password" name="description" class="form-control" rows="5" placeholder="Avoid using yolo, kikou, lol..."></textarea>
