--- a/views/games/view.ejs
+++ b/views/games/view.ejs
@@ -24,8 +24,8 @@
       </div>
       <div class="col-lg-4">
         <p>
-            <span class="glyphicon glyphicon-pencil"></span>
-          
+          <span class="glyphicon glyphicon-pencil"></span>
+
           <%= game.description %>
         </p>
         <p>
@@ -68,7 +68,18 @@
   <div id="map"></div>
   <div class="row">
     <div class="col-lg-12">
-
+      <h3>Share it bitch!</h3>
+      <div class="btn-group btn-group-justified" role="group" aria-label="...">
+        <div class="btn-group" role="group">
+          <button type="button" class="btn btn-default" style="background-color: #4357FF">Facebook</button>
+        </div>
+        <div class="btn-group" role="group">
+          <button type="button" class="btn btn-default" style="background-color: #00C1C8">Twitter</button>
+        </div>
+        <div class="btn-group" role="group">
+          <button type="button" class="btn btn-default" style="background-color: chartreuse">Mail</button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
