--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -27,7 +27,7 @@
         </button>
       </div>
       <div class="logo">
-        <a href="/"><img src="/images/logo.png" alt=""></a>
+        <a href="/"><img class="logo-bis" src="/images/logo.png" alt=""></a>
       </div>
       <div class="collapse navbar-collapse" id="home-nav">
         <ul class="nav navbar-nav">
@@ -36,11 +36,6 @@
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li>
-            <a href="#">
-              <span class="glyphicon glyphicon-search"></span>
-            </a>
-          </li>
           <% if (!userSignedIn) { %>
             <li>
               <a href="/login">Login</a>
