front page gifs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,14 +54,17 @@
     <h2 class="text-center">Click & Fun</h2>
     <div class="row">
       <div class="col-lg-3 text-center">
+        <img class="img-format" src="/images/gif-boardgame-search.gif"></img>
         <h3>Search</h3>
         <p>Search board games, players</p>
       </div>
       <div class="col-lg-3 text-center">
+        <img class="img-format" src="/images/gif-boardgame-post.gif"></img>
         <h3>Select</h3>
         <p>Choose your game</p>
       </div>
       <div class="col-lg-3 text-center">
+        <img class="img-format" src="/images/gif-boardgame-win.gif"></img>
         <h3>Win</h3>
         <p>Smash'em all!</p>
       </div>
