--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
                     <%= game.description.substring(0,50) %>...
                       <% } %>
             </p>
-            <a href="/games/<%= game._id %>" class="btn btn-success">Go somewhere</a>
+            <a href="/games/<%= game._id %>" class="btn btn-success">Details</a>
           </div>
         </div>
       </div>
