--- a/views/authentication/signup.ejs
+++ b/views/authentication/signup.ejs
@@ -4,14 +4,14 @@
       <form action="/signup" method="post">
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="text" name="email" class="form-control">
+          <input type="email" name="email" class="form-control">
         </div>
         <div class="form-group">
           <label for="password">Password</label>
           <input type="password" name="password" class="form-control">
         </div>
 
-        <button type="submit">Signup</button>
+        <button type="submit" class="btn">Signup</button>
       </form>
     </div>
   </div>
