Fix of Google maps

--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -11,8 +11,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZXQMP2GuykxkAKb5m3NpmBJ1NvIZ0WfA&libraries=places" async
-    defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZXQMP2GuykxkAKb5m3NpmBJ1NvIZ0WfA&libraries=places"></script>
 </head>
 
 <body>
